zero-schema-macros/tests/ui/fail/72_optional_zero_valid_tagged_variant.stderr
error[E0271]: type mismatch resolving `<Record as WireTypeSupport>::ZeroState == ZeroInvalid`
  --> tests/ui/fail/72_optional_zero_valid_tagged_variant.rs:38:1
   |
38 | #[zero]
   | ^^^^^^^ expected `ZeroInvalid`, found `ZeroValid`
   |
   = help: see issue #48214
   = note: this error originates in the attribute macro `zero` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<Record as WireTypeSupport>::ZeroState == ZeroInvalid`
  --> tests/ui/fail/72_optional_zero_valid_tagged_variant.rs:38:1
   |
38 | #[zero]
   | ^^^^^^^ expected `ZeroInvalid`, found `ZeroValid`
   |
   = help: see issue #48214
   = note: this error originates in the derive macro `Debug` (in Nightly builds, run with -Z macro-backtrace for more info)
